# cd-gamedriver

./: .gitignore  CMakeLists.txt  INSTALL-cmake.md  Makefile  ansi_color.c  ansi_color.h  array.c  backend.c  call_out.c  comm.h  comm1.c  config.h  ed.c  func_spec.c  hname.c  interface.c  interpret.c  lex.c  main.c  make_func.y  mapping.c  memory.c  memory.h  mstring.c  mudstat.c  ndesc.c  net.c  nqueue.c  object.c  otable.c  parse.c  pcre.c  pcre.h  pinkfish_codes.gperf  pinkfish_codes.h  port.c  postlang.y  random.c  regress.sh  signals.c  (+8 more)
doc/efun/: break_string  explode  hash_string  pcre_capture  pcre_filter  pcre_matches  query_color_enabled  query_theme  set_color_enabled  set_theme  sprintf  strip_color  strlen  strlen_printable  terminal_colour
regress/: expected.output
regress/tests/: test-029.c  test-030.c  test-031.c  test-032.c  test-033.c
